JavaFX Helpers 1.12.0
* Java 19
* JavaFX 19
* ChoiceBoxBuilder